<resources>
    <string name="app_name">Игруля</string>
    <string name="AppHeader">My First Game</string>
    <string name="start">start</string>
    <string name="high_score">High score</string>
    <string name="quit">Quit</string>
    <string name="main_image_view">Main image view</string>
    <string name="res">=</string>
    <string name="score">Score:</string>
    <string name="level">Level:</string>
    <string name="x">x</string>
</resources>
